@@ -1,35 +1,29 @@
 package com.example.spring_boot_tutorial.Aexposition.controller;
 
-import com.example.spring_boot_tutorial.Aexposition.dto.CoachDto;
+import com.example.spring_boot_tutorial.Aexposition.dto.ConsultCoachDto;
 import com.example.spring_boot_tutorial.Aexposition.mapper.CoachMapperService;
-import com.example.spring_boot_tutorial.Bapplication.members.ConsultAllCoaches;
+import com.example.spring_boot_tutorial.Bapplication.coach.ConsultAllCoaches;
 import com.example.spring_boot_tutorial.Ddomain.coach.Coach;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
+@AllArgsConstructor
 @RequestMapping("/api/coach")
 public class CoachController {
-    @Autowired
-    ConsultAllCoaches consultAllCoaches;
 
-    @Autowired
+    ConsultAllCoaches consultAllCoaches;
     CoachMapperService coachMapperService;
 
     @GetMapping
-    public ResponseEntity<List<CoachDto>> getAllCoaches(){
-        List<Coach> coachList=consultAllCoaches.consultAllCoaches();
-        List<CoachDto> coachDtoList=coachList
-                .stream()
-                .map(coach -> coachMapperService.coachToCoachDto(coach))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<ConsultCoachDto>> consultAll() {
+        List<Coach> coaches = consultAllCoaches.consultAll();
+        List<ConsultCoachDto> coachDtoList = coaches.stream().map(coachMapperService::mapFromDomain).toList();
         return new ResponseEntity<>(coachDtoList, HttpStatus.OK);
     }
+
 }
